<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Number"
    android:background="@color/system">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ButtonLastCall"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rectangle"
            android:contentDescription="@string/ButtonLastCall"
            android:onClick="onClickGoLastCall"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ButtonNumberCall2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/phone_call"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/ButtonNumberCall2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shape_circle"
            android:contentDescription="@string/ButtonNumberCall"
            android:onClick="onClickGoNumber"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/number_dialing"
            app:tint="#159101"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/ButtonBookCall"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rectangle"
            android:contentDescription="@string/ButtonBookCall"
            android:onClick="onClickGoBookCall"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toEndOf="@+id/ButtonNumberCall2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526"
            app:srcCompat="@drawable/phonebook" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@color/TopBack"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/becker_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="94dp"
            android:layout_height="26dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="22dp"
            android:background="@color/system"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintBounds" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@color/TopBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/callsBtn"
            android:layout_width="100dp"
            android:layout_height="52dp"
            android:layout_marginBottom="12dp"
            android:background="@color/TopBack"
            android:contentDescription="@string/call_icon"
            android:onClick="onClickGoCalls"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/emailBtn"
            app:layout_constraintLeft_toRightOf="@id/emailBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            app:tint="@color/Green"
            tools:ignore="ImageContrastCheck"
            />

        <ImageButton
            android:id="@+id/emailBtn"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@color/TopBack"
            android:contentDescription="@string/email_icon"
            android:onClick="onClickGoEmail"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/conviviisBtn"
            app:layout_constraintStart_toEndOf="@+id/callsBtn"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:tint="#000000"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/conviviisBtn"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginBottom="4dp"
            android:background="@color/TopBack"
            android:contentDescription="@string/conviviis_icon"
            android:onClick="onClickGoConviviis"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/authBtn"
            app:layout_constraintStart_toEndOf="@+id/emailBtn"
            app:tint="@color/black"
            tools:ignore="ImageContrastCheck"
            app:srcCompat="@drawable/conviviis" />

        <ImageButton
            android:id="@+id/authBtn"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_marginBottom="8dp"
            android:background="@color/TopBack"
            android:contentDescription="@string/settings_icon"
            android:onClick="onClickGoAunth"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/conviviisBtn"
            app:srcCompat="@drawable/settings"
            app:tint="#000000"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="514dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_8"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number8"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_5"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_0"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number0"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_8"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_9"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number9"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_8"
            app:layout_constraintTop_toBottomOf="@+id/btn_6"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_6"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number6"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_3"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_7"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number7"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_4"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_5"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number5"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_2"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_4"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:text="@string/Number4"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_3"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:scaleType="center"
            android:text="@string/Number3"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_2"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:scaleType="center"
            android:text="@string/Number2"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_1"
            android:background="@drawable/shape_circle"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:scaleType="center"
            android:text="@string/Number1"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_2"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="71dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/callNumber"
            app:layout_constraintStart_toEndOf="@+id/btn_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_9"
            app:srcCompat="@android:drawable/sym_action_call"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/Delete"
            android:layout_width="47dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/DeleteNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_delete"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="@color/Red"
            android:contentDescription="@string/back"
            android:onClick="onClickGoCalls"
            app:layout_constraintEnd_toStartOf="@+id/btn_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_7"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/editTextNumber"
            android:layout_width="342dp"
            android:layout_height="57dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="fill_vertical"
            android:hint="@string/AddNumber"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/Delete"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>